--- a/poderes.html
+++ b/poderes.html
@@ -15,7 +15,7 @@
             <h1 class="display-5">Ficha de Personagem</h1>
         </header>
         <nav class="mb-3">
-            <a href="status.html" class="btn btn-outline-primary me-2">Status</a>
+            <a href="index.html" class="btn btn-outline-primary me-2">Status</a>
             <a href="perfil.html" class="btn btn-outline-primary me-2">Perfil</a>
             <a href="inventario.html" class="btn btn-outline-primary me-2">Inventário</a>
             <a href="poderes.html" class="btn active btn-outline-primary me-2">Poderes</a>
