--- a/poderes.html
+++ b/poderes.html
@@ -27,15 +27,15 @@
                     <div class="row mb-3">
                         <div class="col-md-4">
                             <label class="form-label">CLASSE DO PIRATA</label>
-                            <input name="classe_pirata" type="text" class="form-control" value="ATIRADOR" />
+                            <input name="classe_pirata" type="text" class="form-control" value="" />
                         </div>
                         <div class="col-md-4">
                             <label class="form-label">HABILIDADE CHAVE</label>
-                            <input name="habilidade_chave" type="text" class="form-control" value="ENGENHOSIDADE" />
+                            <input name="habilidade_chave" type="text" class="form-control" value="" />
                         </div>
                         <div class="col-md-4">
                             <label class="form-label">TIPO DE CAST</label>
-                            <input name="tipo_cast" type="text" class="form-control" value="ARSENAL" />
+                            <input name="tipo_cast" type="text" class="form-control" value="" />
                         </div>
                     </div>
                     <hr />
