--- a/perfil.html
+++ b/perfil.html
@@ -31,7 +31,7 @@
                     name="classe"
                     type="text"
                     class="form-control data-field"
-                    value="ATIRADOR"
+                    value=""
                   />
                 </div>
                 <div class="col-md-4">
@@ -40,7 +40,7 @@
                     name="ocupacao"
                     type="text"
                     class="form-control data-field"
-                    value="MÉDICO"
+                    value=""
                   />
                 </div>
                 <div class="col-md-4">
@@ -49,7 +49,7 @@
                     name="raca"
                     type="text"
                     class="form-control data-field"
-                    value="HUMANA"
+                    value=""
                   />
                 </div>
               </div>
@@ -61,7 +61,7 @@
                     name="idade"
                     type="text"
                     class="form-control data-field"
-                    value="33 ANOS"
+                    value=""
                   />
                 </div>
                 <div class="col-md-4">
@@ -70,7 +70,7 @@
                     name="altura"
                     type="text"
                     class="form-control data-field"
-                    value="171 CM"
+                    value=""
                   />
                 </div>
                 <div class="col-md-4">
@@ -79,7 +79,7 @@
                     name="peso"
                     type="text"
                     class="form-control data-field"
-                    value="74000 G"
+                    value=""
                   />
                 </div>
               </div>
@@ -91,7 +91,7 @@
                     name="olhos"
                     type="text"
                     class="form-control data-field"
-                    value="MARROM"
+                    value=""
                   />
                 </div>
                 <div class="col-md-4">
@@ -100,7 +100,7 @@
                     name="pele"
                     type="text"
                     class="form-control data-field"
-                    value="BRANCA"
+                    value=""
                   />
                 </div>
                 <div class="col-md-4">
@@ -109,7 +109,7 @@
                     name="cabelo"
                     type="text"
                     class="form-control data-field"
-                    value="PRETO"
+                    value=""
                   />
                 </div>
               </div>
